# rinhabe2024q1-rust-pg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  init.sql  postgresql.conf  readme.md
src/: main.rs
src/routes/: models.rs  services.rs
