[package]
name = "rinha2024q1rust"
version = "0.1.0"
edition = "2021"
authors = ["rsvix@github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
env_logger = "0.10.1"
lazy_static = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.33" , features = ["serde"] }
